--- a/locale/ja/foreman_google.po
+++ b/locale/ja/foreman_google.po
@@ -5,8 +5,8 @@
 #
 # Translators:
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2022
-# Amit Upadhye <aupadhye@redhat.com>, 2022
 # Bryan Kearney <bryan.kearney@gmail.com>, 2022
+# Amit Upadhye <aupadhye@redhat.com>, 2022
 #
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
-"Last-Translator: Bryan Kearney <bryan.kearney@gmail.com>, 2022\n"
+"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
 "Language-Team: Japanese (https://www.transifex.com/foreman/teams/114/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +35,7 @@ msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "このイメージはユーザーのデータ入力に対応しますか (例: cloud-init 経由)?"
 
 msgid "Google Compute Engine plugin for the Foreman."
-msgstr ""
+msgstr "Foreman 用の Google Compute Engine プラグイン。"
 
 msgid "Image"
 msgstr "イメージ"
@@ -47,7 +47,7 @@ msgid "Import facts"
 msgstr "ファクトのインポート"
 
 msgid "JSON key"
-msgstr ""
+msgstr "JSON キー"
 
 msgid "Load Zones"
 msgstr "ゾーンのロード"
@@ -59,7 +59,7 @@ msgid "Machine type"
 msgstr "マシンタイプ"
 
 msgid "Missing an image for operating system!"
-msgstr ""
+msgstr "オペレーティングシステムのイメージがありません!"
 
 msgid "Name"
 msgstr "名前"
@@ -86,7 +86,7 @@ msgid "State"
 msgstr "状態"
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
-msgstr ""
+msgstr "インスタンスへの ssh 接続に使用するユーザーは通常、cloud-user、ec2-user、ubuntu などです。注: Google エンジンは、root ユーザーの ssh をサポートしません。"
 
 msgid "Type"
 msgstr "タイプ"
