--- a/locale/cs_CZ/foreman_google.po
+++ b/locale/cs_CZ/foreman_google.po
@@ -7,10 +7,9 @@
 # mhulan <mhulan@redhat.com>, 2022
 # Pavel Borecki <pavel.borecki@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2022\n"
@@ -30,6 +29,9 @@ msgid "Actions"
 msgstr "Akce"
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -94,6 +96,9 @@ msgstr "Typ"
 
 msgid "Zone"
 msgstr "Zóna"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
