--- a/locale/de/foreman_google.po
+++ b/locale/de/foreman_google.po
@@ -16,10 +16,9 @@
 # Ettore Atalan <atalanttore@googlemail.com>, 2022
 # Lukas Kallies <github.com@luke-web.de>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Lukas Kallies <github.com@luke-web.de>, 2022\n"
@@ -38,6 +37,9 @@ msgstr "Aktionen"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Temporäre externe IP anfügen"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "Unterstützt dieses Abbild die Eingabe von Benutzerdaten (z. B. mittels cloud-init)?"
@@ -101,6 +103,9 @@ msgstr "Typ"
 
 msgid "Zone"
 msgstr "Zone"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "Konsole ist derzeit nicht verfügbar, da die Instanz ausgeschaltet ist"
