--- a/locale/el/foreman_google.po
+++ b/locale/el/foreman_google.po
@@ -6,10 +6,9 @@
 # Translators:
 # Efstathios Iosifidis <iefstathios@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Efstathios Iosifidis <iefstathios@gmail.com>, 2022\n"
@@ -27,6 +26,9 @@ msgid "Actions"
 msgstr "Ενέργειες"
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -91,6 +93,9 @@ msgstr "Τύπος"
 
 msgid "Zone"
 msgstr "Ζώνη"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
