--- a/locale/es/foreman_google.po
+++ b/locale/es/foreman_google.po
@@ -13,10 +13,9 @@
 # Gustavo Varela <gustavo.varela@gmail.com>, 2022
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
@@ -36,6 +35,9 @@ msgstr "Acciones"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Asociar IP externa efímera"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "¿Esta imágen supporta inserción de datos de usuario (p.e. vía could-init)?"
@@ -99,6 +101,9 @@ msgstr "Tipo"
 
 msgid "Zone"
 msgstr "Zona"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "la consola no está disponible en este momento porque la instancia está apagada"
