--- a/locale/it/foreman_google.po
+++ b/locale/it/foreman_google.po
@@ -9,10 +9,9 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2022
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: 0868a4d1af5275b3f70b0a6dac4c99a4, 2022\n"
@@ -31,6 +30,9 @@ msgid "Actions"
 msgstr "Azioni"
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -95,6 +97,9 @@ msgstr "Tipo"
 
 msgid "Zone"
 msgstr "Zona"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
