--- a/locale/ka/foreman_google.po
+++ b/locale/ka/foreman_google.po
@@ -6,10 +6,9 @@
 # Translators:
 # Temuri Doghonadze <temuri.doghonadze@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Temuri Doghonadze <temuri.doghonadze@gmail.com>, 2022\n"
@@ -28,6 +27,9 @@ msgstr "ქმედებები"
 
 msgid "Associate Ephemeral External IP"
 msgstr "ეფემერული გარე IP-ის ასოცირება"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "აქვს თუ არა ამ ასლს მომხმარებლის მონაცემების ჩაწოდების მხარდაჭერა (მაგ. cloudinit)?"
@@ -91,6 +93,9 @@ msgstr "ტიპი"
 
 msgid "Zone"
 msgstr "ზონა"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "კონსოლი ამჟამად მიუწვდომელია. გაშვებული ასლი გამორთულია"
