--- a/locale/ko/foreman_google.po
+++ b/locale/ko/foreman_google.po
@@ -7,10 +7,9 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2022
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: 0868a4d1af5275b3f70b0a6dac4c99a4, 2022\n"
@@ -28,6 +27,9 @@ msgid "Actions"
 msgstr "동작 "
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -92,6 +94,9 @@ msgstr "유형 "
 
 msgid "Zone"
 msgstr "영역 "
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
