--- a/locale/pt_BR/foreman_google.po
+++ b/locale/pt_BR/foreman_google.po
@@ -10,10 +10,9 @@
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 # Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 20"
@@ -35,6 +34,9 @@ msgstr "Ações"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Associar IP externo efêmero"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "Esta imagem suporta a entrada de dados do usuário (ex.: via cloud-init)?"
@@ -98,6 +100,9 @@ msgstr "Tipo"
 
 msgid "Zone"
 msgstr "Zona"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "console não está disponível neste momento porque a instância está desligada"
