--- a/locale/zh_CN/foreman_google.po
+++ b/locale/zh_CN/foreman_google.po
@@ -9,10 +9,9 @@
 # tim123, 2022
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_google 1.0.0\n"
+"Project-Id-Version: foreman_google 1.0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2022-08-01 12:51+0000\n"
 "Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
@@ -32,6 +31,9 @@ msgstr "操作"
 
 msgid "Associate Ephemeral External IP"
 msgstr "关联临时外部 IP"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "这个镜像是否支持用户数据输入（例如：通过 cloud-init）？"
@@ -95,6 +97,9 @@ msgstr "类型"
 
 msgid "Zone"
 msgstr "区"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "控制台目前不可用，因为实例已关闭"
