--- a/locale/el/foreman_google.po
+++ b/locale/el/foreman_google.po
@@ -6,7 +6,6 @@
 # Translators:
 # Efstathios Iosifidis <iefstathios@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -27,6 +26,15 @@ msgid "Actions"
 msgstr "Ενέργειες"
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -83,6 +91,12 @@ msgstr "Μέγεθος (GB)"
 msgid "State"
 msgstr "Κατάσταση"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr ""
 
@@ -91,6 +105,9 @@ msgstr "Τύπος"
 
 msgid "Zone"
 msgstr "Ζώνη"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
