--- a/locale/es/foreman_google.po
+++ b/locale/es/foreman_google.po
@@ -13,7 +13,6 @@
 # Gustavo Varela <gustavo.varela@gmail.com>, 2022
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -36,6 +35,15 @@ msgstr "Acciones"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Asociar IP externa efímera"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "¿Esta imágen supporta inserción de datos de usuario (p.e. vía could-init)?"
@@ -91,6 +99,12 @@ msgstr "Tamaño (GB)"
 msgid "State"
 msgstr "Estado"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr ""
 
@@ -99,6 +113,9 @@ msgstr "Tipo"
 
 msgid "Zone"
 msgstr "Zona"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "la consola no está disponible en este momento porque la instancia está apagada"
