--- a/locale/fr/foreman_google.po
+++ b/locale/fr/foreman_google.po
@@ -10,7 +10,6 @@
 # Claer <transiblu@claer.hammock.fr>, 2022
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -33,6 +32,15 @@ msgstr "Actions"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Associer l’IP externe éphémère"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "Cette image prend-t-elle en charge l'entrée de paramètres utilisateur (p.e. via cloud-init) ?"
@@ -88,6 +96,12 @@ msgstr "Taille (Go)"
 msgid "State"
 msgstr "État"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr "L'utilisateur qui est utilisé pour se connecter à l'instance via ssh, normalement cloud-user, ec2-user, ubuntu, etc. Remarque : le moteur Google ne prend pas en charge SSH pour l'utilisateur root."
 
@@ -96,6 +110,9 @@ msgstr "Type"
 
 msgid "Zone"
 msgstr "Zone"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "la console n'est pas disponible pour le moment car l'instance est éteinte"
