--- a/locale/ka/foreman_google.po
+++ b/locale/ka/foreman_google.po
@@ -6,7 +6,6 @@
 # Translators:
 # Temuri Doghonadze <temuri.doghonadze@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -28,6 +27,15 @@ msgstr "ქმედებები"
 
 msgid "Associate Ephemeral External IP"
 msgstr "ეფემერული გარე IP-ის ასოცირება"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "აქვს თუ არა ამ ასლს მომხმარებლის მონაცემების ჩაწოდების მხარდაჭერა (მაგ. cloudinit)?"
@@ -83,6 +91,12 @@ msgstr "ზომა (გბ)"
 msgid "State"
 msgstr "State"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr "მომხმარებელი, რომელიც ssh-ით შესასვლელად გამოყენება. ჩვეულებრივ გამოიყენება cloud-user, ec2-user, ubuntu და ა.შ. დაიმახსოვრეთ: Google Engine-ს root მომხმარებლის SSH გასაღებების მხარდაჭერა არ გააჩნია."
 
@@ -91,6 +105,9 @@ msgstr "ტიპი"
 
 msgid "Zone"
 msgstr "ზონა"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "კონსოლი ამჟამად მიუწვდომელია. გაშვებული ასლი გამორთულია"
