--- a/locale/ko/foreman_google.po
+++ b/locale/ko/foreman_google.po
@@ -7,7 +7,6 @@
 # Bryan Kearney <bryan.kearney@gmail.com>, 2022
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -28,6 +27,15 @@ msgid "Actions"
 msgstr "동작 "
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -84,6 +92,12 @@ msgstr "크기 (GB)"
 msgid "State"
 msgstr "상태 "
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr ""
 
@@ -92,6 +106,9 @@ msgstr "유형 "
 
 msgid "Zone"
 msgstr "영역 "
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
