--- a/locale/pt_BR/foreman_google.po
+++ b/locale/pt_BR/foreman_google.po
@@ -10,7 +10,6 @@
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 # Luiz Henrique Vasconcelos <luizvasconceloss@yahoo.com.br>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -35,6 +34,15 @@ msgstr "Ações"
 
 msgid "Associate Ephemeral External IP"
 msgstr "Associar IP externo efêmero"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "Esta imagem suporta a entrada de dados do usuário (ex.: via cloud-init)?"
@@ -90,6 +98,12 @@ msgstr "Tamanho (GB)"
 msgid "State"
 msgstr "Estado"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr ""
 
@@ -98,6 +112,9 @@ msgstr "Tipo"
 
 msgid "Zone"
 msgstr "Zona"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "console não está disponível neste momento porque a instância está desligada"
