--- a/locale/sv_SE/foreman_google.po
+++ b/locale/sv_SE/foreman_google.po
@@ -8,7 +8,6 @@
 # Fredrik Wendt <fredrik@wendt.se>, 2022
 # johnny.westerlund <johnny.westerlund@gmail.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -30,6 +29,15 @@ msgid "Actions"
 msgstr "Åtgärder"
 
 msgid "Associate Ephemeral External IP"
+msgstr ""
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
 msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
@@ -86,6 +94,12 @@ msgstr "Storlek (GB)"
 msgid "State"
 msgstr "Tillstånd"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr ""
 
@@ -94,6 +108,9 @@ msgstr "Typ"
 
 msgid "Zone"
 msgstr "Zon"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr ""
