--- a/locale/zh_CN/foreman_google.po
+++ b/locale/zh_CN/foreman_google.po
@@ -9,7 +9,6 @@
 # tim123, 2022
 # Amit Upadhye <aupadhye@redhat.com>, 2022
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: foreman_google 1.0.0\n"
@@ -32,6 +31,15 @@ msgstr "操作"
 
 msgid "Associate Ephemeral External IP"
 msgstr "关联临时外部 IP"
+
+msgid "Certificate path, for GCE only"
+msgstr ""
+
+msgid "Deprecated, email is automatically loaded from the JSON file. For GCE only"
+msgstr ""
+
+msgid "Deprecated, project is automatically loaded from the JSON file. For GCE only"
+msgstr ""
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr "这个镜像是否支持用户数据输入（例如：通过 cloud-init）？"
@@ -87,6 +95,12 @@ msgstr "大小 (GB)"
 msgid "State"
 msgstr "状态"
 
+msgid "The email parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
+msgid "The project parameter is deprecated, value is automatically loaded from the JSON file"
+msgstr ""
+
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, etc. Note: Google engine doesn't support SSH for the root user."
 msgstr "用于 ssh 到实例的用户，通常为 cloud-user、ec2-user、ubuntu 等：Google 引擎不支持 root 用户的 SSH。"
 
@@ -95,6 +109,9 @@ msgstr "类型"
 
 msgid "Zone"
 msgstr "区"
+
+msgid "Zone, for GCE only"
+msgstr ""
 
 msgid "console is not available at this time because the instance is powered off"
 msgstr "控制台目前不可用，因为实例已关闭"
